[package]

name = "helloworld-tonic"
version= "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.5"
tokio = { version = "1.23.0", features = ["full"] }
[build-dependencies]
tonic-build = "0.8.4"



